fix welcome button display issue on mobile

--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -57,6 +57,7 @@
       
       @media screen and (max-width: $break-small)
         max-width: 100%
+        min-width: 0
         width: 100%
 
 .carousel-holder
